[tool.poetry]
name = "domashka-web-04"
version = "0.1.0"
description = ""
authors = ["Vesnani <132687769+Vesnani@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "domashka_web_04"}]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
